Bug fixes and some new features.
git-svn-id: https://plugins.svn.wordpress.org/login-configurator/trunk@645701 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/includes/login-configurator-admin.css
+++ b/includes/login-configurator-admin.css
@@ -5,7 +5,7 @@
  * @package Login Configurator
  * @subpackage templates
  * @author GrandSlambert
- * @copyright 2009-2011
+ * @copyright 2009-2013
  * @access public
  * @since 1.6
 */
@@ -53,4 +53,9 @@ ul#login_configurator_tabs {
 
 #login_configurator_tabs li.login-configurator-selected a{
      color: #fff;
+}
+
+.form-table tr {
+     border-bottom: solid 1px #ddd;
+     padding: 5px;
 }
